--- a/bryce.html
+++ b/bryce.html
@@ -209,6 +209,7 @@
 	<script>
 		var loader = document.getElementById("preloader");
 		var song = new Audio("song.mp3");
+		song.loop = true;
 		song.volume = 0.1;
 
 		function theyLikeMusic() {
@@ -223,10 +224,10 @@
 			song.pause();
 		}
 
-		song.addEventListener("ended", function(){
-			song.currentTime = 0;
-			song.play();
-	    });
+		song.addEventListener('ended', function() {
+			this.currentTime = 0;
+			this.play();
+		}, false);
 	    
 		window.addEventListener("load", function(){loader.style.display = "none";})
 		window.onbeforeunload = function () {
