--- a/annie.html
+++ b/annie.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Dear Bryce</title>
+	<title>Dear Annie</title>
 	<link rel="home" href="https://widjaja0.github.io/" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://slgoetz.com/public/css/main.min.css?v=1586639039" rel="stylesheet">
@@ -118,14 +118,14 @@
 			
 			<div class="affix">
 				<section class="project-section">
-					<div class="section-title">Bryce-core</div>
+					<div class="section-title">Annie-core</div>
 					<div class="projects clear">
 						<div class="project black" style="background-color: #fff4ea">
 							<a href="https://open.spotify.com/playlist/7GKiGTMepvPAAGuAkfbUvD?si=e7564976ce794018" target="_blank" rel="no_follow"></a>
 							<img class="product full" src="./spotify.png"/>
 								
 							<div class="text">
-								<h3>Bryce-core!</h3>
+								<h3>Annie-core!</h3>
 								<p class="motto">Click here for a short playlist that reminds me of you...</p>
 							</div>
 							<div class="services">The first two songs remind me of you as a person, and the next two remind me of what it feels like when we vibe. The last song is a song that has stuck with me and reminds me of the fun moments we've had together :P</div>
