--- a/kyliel.html
+++ b/kyliel.html
@@ -129,7 +129,7 @@
 								<h3>Kylie-core!</h3>
 								<p class="motto">Click here for a short playlist that reminds me of you...</p>
 							</div>
-							<div class="services">The first two songs remind me of you as a person, and the next two remind me of what it feels like when we're vibing. The last song is a song that has stuck with me and reminds me of the fun moments we've had together :P (last one is a bonus)</div>
+							<div class="services">The first two songs remind me of you as a person, and the next two remind me of what it feels like when we're vibing. The fifth song is a song that has stuck with me and reminds me of the fun moments we've had together :P (last two are a bonus)</div>
 						</div>
 						<div class="project white" style="background-color: #3d77ea">
 							<img class="product center" src="./kylieimgs/kylie1.jpg"/>
