--- a/kyliel.html
+++ b/kyliel.html
@@ -215,7 +215,7 @@
 			song.pause();
 		}
 
-		song.addEventListener('ended', function() {
+		song.addEventListener("ended", function() {
 			this.currentTime = 0;
 			this.volume = 0.1;
 			this.play();
