annie + vian start

--- a/bryce.html
+++ b/bryce.html
@@ -192,7 +192,7 @@
 					<div class="content">
 						<div class="text">
 							<h2>Dear: Bryce Villao</h2>
-							<p>Hey Bryce! I'm so glad that we're roommates this year and I'm really thankful for all that you've done for and given to me this year. Including the things you've done for my family :) I've never known a guy that is so respectable and admirable as you are like your clear skin (which I'm sure Annie complements plenty) and your smarts and how calm and personable you are, and on and on... Looking forward to another two semesters with my one and only pinoy roomie &#128523;</p>
+							<p>Hey Bryce! I'm so glad that we're roommates this year and I'm really thankful for all that you've done for and given to me this year. Including the things you've done for my family :) I've never known a guy that is so respectable and admirable as you are like your clear skin (which I'm sure Annie complements plenty) and your smarts and how calm and personable you are, and on and on... The college dorm life really would not be this amazing and awesome of a ride without you. Looking forward to another two semesters with my one and only pinoy roomie &#128523;</p>
 							<p> - Widjaja
 						</div>
 						<div>
