--- a/evelyn.html
+++ b/evelyn.html
@@ -167,7 +167,7 @@
 							<div class="services">SORRY FOR MAKING YOU 5TH WHEEL I REALLY WANTED TO GET YOU TO PLAY BUT WE STARTED BETTING AND THEN I WAS LIKE ASHJASHDJASHDJAH</div>
 						</div>
 						<div class="project white" style="background-color: #2d2d2d">
-							<img class="product center" src="./evelynimgs/ev5.jpg"/>
+							<img class="product center" src="./evelynimgs/ev5.jpeg"/>
 								
 							<div class="text">
 								<h3>BBQ STOP and Kylie's Birthday &#128523;&#128523;&#128523;</h3>
