--- a/matt.html
+++ b/matt.html
@@ -158,7 +158,7 @@
 							<div class="services">Bro girls FEEN over you &#129397;</div>
 						</div>
 						<div class="project white" style="background-color: #b1cbab">
-							<img class="product center" src="./mattimgs/matt4.jpg"/>
+							<img class="product center" src="./mattimgs/matt4.jpeg"/>
 								
 							<div class="text">
 								<h3>W RIZZZZZZZZZ</h3>
