--- a/resume.html
+++ b/resume.html
@@ -5,19 +5,24 @@
 	<title>Widjaja™</title>
 	<link rel="stylesheet" href="stylesheet.css">
 	<style>
-		div {
-			text-align: center;
-			padding-top: 20%;
-			font-family: monospace;
-			font-size: xx-large;
-		}
-	</style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        #pdf-container {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 	<link rel="icon" href="https://em-content.zobj.net/source/apple/354/christmas-tree_1f384.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div class="thinfont biggerf">
-	<iframe src="resume.pdf" width="100%" height="600px"></iframe>
-</div>
+	<div id="pdf-container">
+        <embed src="resume.pdf" type="application/pdf" width="100%" height="100%" />
+    </div>
 </body>
 </html>
