--- a/index.html
+++ b/index.html
@@ -7,17 +7,47 @@
 	<style>
 		div {
 			text-align: center;
-			padding-top: 20%;
 			font-family: monospace;
 			font-size: xx-large;
+			margin: 2%;
+		}
+		#name {
+			text-align: center;
+			margin: 10%;
+			padding: 50px;
+			border: black solid 5px;
+			border-radius: 10px;
+			font-size: 50pt;
+			box-shadow: 5px 5px gold;
+			text-shadow: 5px 5px lightblue;
+		}
+		#mainbody {
+			
 		}
 	</style>
 	<link rel="icon" href="https://em-content.zobj.net/source/apple/354/christmas-tree_1f384.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div class="thinfont biggerf">
-	<br>You're not supposed to be here. &#128563;
+<div id="mainbody">
+	<div id="name">
+		WILLIAM WIDJAJA
+	</div>
+	<div class="thinfont biggerf">
+		<div id="aboutme">
+			Computer Science student at UCSD. Expected graduation 2027.
+		</div>
+		<div>
+			<a target="_blank" href="/resume.html">My Resume</a>
+		</div>
+		<div>
+			<a target="_blank" href="https://www.linkedin.com/in/wwidjaja0/">LinkedIn</a>
+		</div>
+		<div>
+			<a target="_blank" href="/bryce.html">Bryce's Gift 2024 (Others hidden.)</a>
+		</div>
+	</div>
 </div>
+
 </body>
 </html>
