--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 			box-shadow: 5px 5px gold;
 			text-shadow: 5px 5px lightblue;
 		}
-		#mainbody {
-			
+		#links {
+			display: flex;
+			align-items: center;
+			justify-content: center;
 		}
 	</style>
 	<link rel="icon" href="https://em-content.zobj.net/source/apple/354/christmas-tree_1f384.png">
@@ -37,14 +39,16 @@
 		<div id="aboutme">
 			Computer Science student at UCSD. Expected graduation 2027.
 		</div>
-		<div>
-			<a target="_blank" href="/resume.html">My Resume</a>
-		</div>
-		<div>
-			<a target="_blank" href="https://www.linkedin.com/in/wwidjaja0/">LinkedIn</a>
-		</div>
-		<div>
-			<a target="_blank" href="/bryce.html">Bryce's Gift 2024 (Others hidden.)</a>
+		<div id="links">
+			<div>
+				<a target="_blank" href="/resume.html">My Resume</a>
+			</div>
+			<div>
+				<a target="_blank" href="https://www.linkedin.com/in/wwidjaja0/">LinkedIn</a>
+			</div>
+			<div>
+				<a target="_blank" href="/bryce.html">Bryce's Gift 2024 (Others hidden.)</a>
+			</div>
 		</div>
 	</div>
 </div>
