--- a/index.html
+++ b/index.html
@@ -41,13 +41,10 @@
 		</div>
 		<div id="links">
 			<div>
-				<a target="_blank" href="/resume.html">My Resume</a>
+				<a target="_blank" href="https://docs.google.com/document/d/14jt5cF5Jsfq07usrb1QhpMIa9S47cM-M/edit?usp=sharing&ouid=108954211673621266313&rtpof=true&sd=true">My Resume</a>
 			</div>
 			<div>
 				<a target="_blank" href="https://www.linkedin.com/in/wwidjaja0/">LinkedIn</a>
-			</div>
-			<div>
-				<a target="_blank" href="/bryce.html">Bryce's Gift 2024 (Others hidden.)</a>
 			</div>
 		</div>
 	</div>
